--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ main {
 }
 
 #welcome-section h1 {
-  font-size: 5em;
+  font-size: 3em;
   margin-bottom: 0;
 }
 
 #welcome-section p {
-  text-align: center;
+  text-align: left;
   font-size: 2em;
   margin-top: 0;
   color: royalblue;
@@ -91,6 +91,11 @@ main {
   gap: 2em;
   margin-block: 3em;
   max-width: 1366px;
+}
+
+.projects-title {
+  color: #777;
+  text-align: center;
 }
 
 .project-tile {
@@ -162,6 +167,15 @@ footer {
 @media screen and (min-width: 600px) {
   body {
     background-size: 100%;
+  }
+
+  #welcome-section h1 {
+    font-size: 5em;
+    margin-bottom: 0;
+  }
+
+  #welcome-section p {
+    text-align: center;
   }
 
   .projects-container {
