--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
+:root {
+  --accent: #5c9c5c;
+  --secondary: #c9bcb4;
+  --danger: #591a4c;
+  --white: #ebddda;
+  --text: #404140;
+}
+
 html {
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
+  color: var(--text);
+  background-color: var(--white);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-image: url(./image/bg.png);
-  background-size: 100% 20%;
-  background-repeat: no-repeat;
   box-sizing: border-box;
 }
 
@@ -24,8 +32,19 @@ main {
   padding: 0 1em;
 }
 
+#about-me {
+  text-decoration: none;
+  border: 2px solid var(--secondary);
+  border-radius: 10px;
+  padding: 2em;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
+  margin-block: 3em;
+  margin-inline: auto;
+  max-width: 1366px;
+}
+
 #welcome-section {
-  color: #333;
   display: grid;
   place-items: center;
   height: 50vh;
@@ -40,7 +59,7 @@ main {
   text-align: left;
   font-size: 2em;
   margin-top: 0;
-  color: royalblue;
+  color: var(--accent);
 }
 
 #navbar {
@@ -51,7 +70,7 @@ main {
   position: fixed;
   width: 100vw;
   box-sizing: border-box;
-  background-color: white;
+  background-color: var(--white);
   box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.1);
 }
 
@@ -69,18 +88,23 @@ main {
 
 #navbar ul li a {
   font-size: 1.2em;
-  color: royalblue;
+  color: var(--accent);
   text-decoration: none;
   box-sizing: border-box;
   transition: border 0.1s;
 }
 
 #navbar ul li a:hover {
-  border-bottom: 2px solid royalblue;
+  border-bottom: 1px solid var(--accent);
 }
 
 .my-name {
-  color: #3EB489;
+  color: var(--danger);
+}
+
+.profile-picture {
+  border-radius: 50%;
+  image-rendering: pixelated;
 }
 
 .projects-container {
@@ -93,35 +117,36 @@ main {
   max-width: 1366px;
 }
 
-.projects-title {
-  color: #777;
+.session-title {
+  color: #1c5c48;
   text-align: center;
 }
 
 .project-tile {
   color: black;
   text-decoration: none;
-  border: 2px solid #eee;
+  border: 2px solid var(--secondary);
   border-radius: 10px;
   padding: 0 2em 1em;
   box-sizing: border-box;
-  border: 2px solid white;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
   transition: border 0.3s;
 }
 
 .project-tile .project-title {
-  color: royalblue;
+  color: #002a33;
 }
 
 .project-tile .project-description {
-  color: black;
+  color: #404140;
 }
 
 .project-tile .project-img {
   width: 100%;
   border-radius: 10px;
   filter: grayscale(1);
+  background-color: #002a33;
+  height: 16rem;
 }
 
 .project-tile p {
@@ -129,21 +154,29 @@ main {
 }
 
 .project-tile:hover {
-  border: 2px solid royalblue;
+  border: 2px solid var(--accent);
 }
 
 .project-tile:hover > img {
   filter: grayscale(0);
 }
 
+.about-me-body {
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  margin-top: 3em;
+  gap: 1em;
+}
+
 footer {
-  background: royalblue;
+  background: var(--accent);
   margin: 0;
   padding: 0;
 }
 
 .social {
-  color: white;
+  color: var(--white);
   display: grid;
   place-items: center;
 }
@@ -156,12 +189,12 @@ footer {
 }
 
 .social ul li a {
-  color: white;
+  color: var(--white);
   font-size: 5em;
 }
 
 .social ul li a:hover {
-  color: purple;
+  color: var(--danger);
 }
 
 @media screen and (min-width: 600px) {
@@ -184,7 +217,17 @@ footer {
 }
 
 @media screen and (min-width: 900px) {
+  #about-me {
+    padding: 2em 6em;
+  }
+
   .projects-container {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  .about-me-body {
+    flex-direction: row;
+    gap: 6em;
+    align-items: center;
   }
 }
