add: new card layout

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
+
+
 :root {
   --accent: #47b64b;
   --secondary: #56787a;
@@ -19,8 +22,7 @@ body {
   background-color: var(--white);
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Lato';
   box-sizing: border-box;
 }
 
@@ -55,12 +57,13 @@ main {
 
 #welcome-section h1 {
   font-size: 4.5em;
+  margin-block: 0;
 }
 
 #welcome-section p {
   text-align: left;
   font-size: 2em;
-  margin-top: 1em;
+  margin: 0;
   color: var(--accent);
   font-family: monospace;
 }
@@ -92,22 +95,18 @@ main {
 
 #navbar ul li a {
   font-size: 1.2em;
-  color: var(--accent);
+  color: var(--text);
   text-decoration: none;
   box-sizing: border-box;
-  transition: border 0.1s;
+  transition: border 0.3s;
 }
 
 #navbar ul li a:hover {
-  border-bottom: 1px solid var(--accent);
+  border-bottom: 1px solid var(--text);
 }
 
 .my-name {
   color: var(--pop);
-}
-
-.headline {
-  background-color: var(--text);
 }
 
 .profile-picture {
@@ -127,7 +126,7 @@ main {
 }
 
 .section-title {
-  color: #1c5c48;
+  color: var(--secondary);
   text-align: center;
 }
 
@@ -135,28 +134,31 @@ main {
   color: var(--text);
   text-decoration: none;
   border: 2px solid var(--light);
-  border-radius: 10px;
-  padding: 0 2em 1em;
+  padding: 0;
   box-sizing: border-box;
   box-shadow: 1ch 1ch 0 0 rgba(0, 0, 0, 0.1);
   transition: border 0.3s;
 }
 
 .card > .card-title {
-  color: var(--accent);
+  text-align: left;
+  font-weight: 400;
+  color: var(--text);
   padding: 1ch;
-}
-
-.card > .card-description {
-  color: #404140;
+  margin: 0;
 }
 
 .card > .card-img {
+  padding: 2em;
+}
+
+.card > .card-img > img {
+  background-color: var(--pop);
+  padding: 1ch;
   width: 100%;
-  border-radius: 10px;
-  filter: grayscale(1);
-  background-color: #002a33;
+  object-fit: contain;
   height: 16rem;
+  box-sizing: border-box;
 }
 
 .card p {
@@ -164,11 +166,25 @@ main {
 }
 
 .card:hover {
-  border: 2px solid var(--accent);
+  border: 2px solid var(--pop);
 }
 
-.card:hover > img {
-  filter: grayscale(0);
+.card:hover > .card-title {
+  image-rendering: optimizeSpeed;
+  image-rendering: pixelated;
+  image-rendering: optimize-contrast;
+  background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgLTAuNSAyIDIiIHNoYXBlLXJlbmRlcmluZz0iY3Jpc3BFZGdlcyI+CjxtZXRhZGF0YT5NYWRlIHdpdGggUGl4ZWxzIHRvIFN2ZyBodHRwczovL2NvZGVwZW4uaW8vc2hzaGF3L3Blbi9YYnh2Tmo8L21ldGFkYXRhPgo8cGF0aCBzdHJva2U9IiNjMGMwYzAiIGQ9Ik0wIDBoMU0xIDFoMSIgLz4KPC9zdmc+");
+  background-position: 0 0;
+  background-repeat: repeat;
+  background-size: 3px;
+}
+
+.card > .card-title > i {
+  display: none;
+}
+
+.card:hover > .card-title > i {
+  display: block;
 }
 
 .about-me-body {
@@ -201,8 +217,8 @@ footer {
 }
 
 .social ul li a {
-  color: var(--white);
-  font-size: 5em;
+  color: var(--light);
+  font-size: 3em;
 }
 
 .social ul li a:hover {
@@ -210,7 +226,7 @@ footer {
 }
 
 p.caret-underscore {
-  padding: 2ch;
+  padding: 1ch;
   position: relative;
   max-width: max-content;
 }
@@ -219,6 +235,11 @@ p.caret-underscore > span:last-child {
   position: relative;
   animation: blink 1s step-end infinite;
   border-bottom: 2px solid var(--accent);
+}
+
+.flex-justify-between {
+  display: flex;
+  justify-content: space-between;
 }
 
 @keyframes typing {
@@ -255,7 +276,7 @@ p.caret-underscore > span:last-child {
   }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 990px) {
   #about-me {
     padding: 2em 6em;
   }
@@ -278,7 +299,8 @@ p.caret-underscore > span:last-child {
   }
 
   p.caret-underscore {
-    padding: 2ch;
+    padding-inline: 2ch;
+    padding-block: 1ch;
   }
 
   p.caret-underscore > span:last-child {
